Fix alignment

--- a/css/styling.css
+++ b/css/styling.css
@@ -267,22 +267,31 @@ hr.small {
     box-shadow: 2px 2px 10px #333;
 }
 
-.alignright {
+.seth-align {
     text-align: right;
     margin-right: 0px;
-
 }
 
-@media screen and (min-width: 200px) {
-    .about-offset {
-        margin-left: 0px;
+@media screen and (max-width: 1200px) {
+    .seth-align {
+        text-align: center;
+    }
+    .josh-align {
+        text-align: center;
     }
 }
+
 
 .about-offset {
     margin-left: 15%;
 }
 
+@media screen and (max-width: 1200px) {
+    .about-offset {
+        margin-left: 0%;
+        color: blue;
+    }
+}
 
 /* Services */
 
